--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 
     "require": {
       "jqgeeks/utils" : ">=1.1.3",
-      "webmodules/webcomponentsjs" : ">=0.5.2"
+      "webmodules/webcomponentsjs" : ">=0.5.2",
+      "pitana/pitana" : ">=1.0.4"
     }
     
 }
