--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jqtags/jqtag",
+    "name": "jqgeeks/jqtag",
     "type": "library",
     "description": "JQuery Utilitties compatible with rudrax framework",
     "keywords": ["rudra", "API"],
