--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
                 "version": "1.0.4",
                 "source": {
                     "url": "https://github.com/pitana/pitana.js.git",
-                    "type": "svn"
+                    "type": "svn",
+                    "reference"  : "releases/tag/1.0.4"
                 }
             }
         }
