--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
                 "name": "pitana/pitana",
                 "version": "1.0.4",
                 "source": {
-                    "url": "https://github.com/pitana/pitana.js.git",
-                    "type": "svn",
+                    "url": "git://github.com/pitana/pitana.js.git",
+                    "type": "git",
                     "reference"  : "releases/tag/1.0.4"
                 }
             }
