--- a/composer.json
+++ b/composer.json
@@ -5,26 +5,23 @@
     "keywords": ["rudra", "API"],
     "license": "MIT",
     
-    "repositories": 
-	[
-        {
-            "type": "package",
-            "package": {
-                "name": "pitana/pitana",
-                "version": "1.0.4",
-                "source": {
-                    "url": "git://github.com/pitana/pitana.js.git",
-                    "type": "git",
-                    "reference"  : "1.0.4"
-                }
+    "repositories": [{
+        "type": "package",
+        "package": {
+            "name": "pitana/pitana.js",
+            "version": "1.0.4",
+            "source": {
+                "url": "git://github.com/pitana/pitana.js.git",
+                "type": "git",
+                "reference"  : "1.0.4"
             }
         }
-    ],
+    }],
 
     "require": {
       "jqgeeks/utils" : ">=1.1.3",
       "webmodules/webcomponentsjs" : ">=0.5.2",
-      "pitana/pitana" : "1.0.4"
+      "pitana/pitana.js" : "1.0.4"
     }
     
 }
