--- a/composer.json
+++ b/composer.json
@@ -4,24 +4,11 @@
     "description": "JQuery Utilitties compatible with rudrax framework",
     "keywords": ["rudra", "API"],
     "license": "MIT",
-    
-    "repositories": [{
-        "type": "package",
-        "package": {
-            "name": "pitana/pitana.js",
-            "version": "1.0.4",
-            "source": {
-                "url": "git://github.com/pitana/pitana.js.git",
-                "type": "git",
-                "reference"  : "1.0.4"
-            }
-        }
-    }],
+
 
     "require": {
       "jqgeeks/utils" : ">=1.1.3",
-      "webmodules/webcomponentsjs" : ">=0.5.2",
-      "pitana/pitana.js" : "1.0.4"
+      "webmodules/webcomponentsjs" : ">=0.5.2"
     }
     
 }
