--- a/module.properties
+++ b/module.properties
@@ -1,4 +1,11 @@
-[jqtags/jqtag]
-jqtags=jqtag.js
-@=jqgeeks/utils
+[pitana/pitana.js]
+pitana=../../pitana/pitana.js/dist/pitana.js
+@=webmodules/webcomponents/lite
 
+[jqgeeks/jqtag]
+jqtags=jqtag.js
+@=jqgeeks/utils,pitana/pitana.js
+
+[jqgeeks/jqtag/test]
+jqtags=jqtag.test.js
+@=jqgeeks/jqtag
