naming convention corrected

--- a/module.properties
+++ b/module.properties
@@ -7,5 +7,5 @@ jqtags=jqtag.js
 @=jqgeeks/utils,pitana/pitana.js
 
 [jqgeeks/jqtag/test]
-jqtags=jqtag.test.js
+jqtags=jqtags.test.js
 @=jqgeeks/jqtag
