--- a/module.properties
+++ b/module.properties
@@ -4,6 +4,7 @@ pitana=../../pitana/pitana.js/dist/pitana.js
 
 [jqgeeks/jqtag]
 jqtags=jqtag.js
+jqtagscss=jqtag.css
 @=jqgeeks/utils,pitana/pitana.js
 
 [jqgeeks/jqtag/test]
