--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,14 @@
 {
-    "name": "jqgeeks/jqtag",
-    "type": "library",
-    "description": "A tag library to comply with jqgeeks/utils",
-    "keywords": ["x-tags", "polymers"],
-    "license": "MIT",
+	"name": "webmodules/jqtag",
+	"type": "library",
+	"description": "A tag library based on pitana and jquery, to comply with foo ",
+	"keywords": ["x-tags", "polymers"],
+	"license": "MIT",
 
-
-    "require": {
-      "jqgeeks/utils" : ">=1.1.3",
-      "webmodules/webcomponentsjs" : ">=0.5.2",
-      "pitana/pitana.js" : "dev-master"
-    }
-    
+	"require": {
+		"webmodules/foo": ">=2.0.2",
+		"webmodules/webcomponentsjs": ">=0.5.2",
+		"pitana/pitana.js": ">=0.0.0",
+		"webmodules/jquery": ">=1.8"
+	}
 }
