--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
 	"dependencies": {
 		"webmodules-foo": ">=2.0.2",
 		"webmodules-webcomponentsjs": ">=0.5.3",
-		"pitana-pitana.js": ">=1.0.62",
+		"jqgeeks-pitana.js": ">=1.0.62",
 		"webmodules-jquery": ">=1.8"
 	},
 	"license": "MIT",
