--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,7 @@
 	"keywords": ["pitana", "jquery"],
 	"dependencies": {
 		"webmodules-foo": ">=3.0.0",
-		"webmodules-webcomponentsjs": ">=0.5.3",
-		"jqgeeks-pitana.js": "~1.0.7",
+		"pitana.js": "~1.0.9",
 		"webmodules-jquery": ">=1.8"
 	},
 	"license": "MIT",
